# FaaSInfer

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
examples/: benchmark.py  chat_bot.py  code_generation.py  custom_config.py  large_scale.py  multi_model.py  quickstart.py  streaming_api.py
src/faasinfer/: __init__.py  __main__.py  __version__.py  cli.py  config.py  system.py
src/faasinfer/autoscaling/: __init__.py  controller.py
src/faasinfer/batching/: __init__.py  policies.py  registry.py
src/faasinfer/core/: __init__.py  migration.py  model_manager.py  router.py  scheduler.py  types.py  worker.py
src/faasinfer/gateway/: __init__.py  api.py  routes.py
src/faasinfer/kv-cashe/: __init__.py  manager.py
src/faasinfer/monitoring/: __init__.py  metrics.py
src/faasinfer/storage/: __init__.py  cache.py  converter.py  registry.py
src/faasinfer/utils/: __init__.py  bandwidth_tracker.py  logging.py  ray_utils.py  retry.py  time_estimators.py
