[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faasinfer"
version = "1.0.0"
description = "Low-Latency Serverless Inference for Large Language Models"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "FaaSInfer Team", email = "team@faasinfer.ai"}
]
keywords = ["llm", "inference", "serverless", "ray", "vllm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "ray[default]>=2.9.0",
    "torch>=2.1.0",
    "transformers>=4.35.0",
    "vllm>=0.2.7",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "safetensors>=0.4.0",
    "boto3>=1.28.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
]
gcs = ["google-cloud-storage>=2.10.0"]
azure = ["azure-storage-blob>=12.19.0"]

[project.scripts]
faasinfer = "faasinfer.cli:cli"

[project.urls]
Homepage = "https://github.com/your-org/faasinfer"
Documentation = "https://faasinfer.readthedocs.io"
Repository = "https://github.com/your-org/faasinfer"
Issues = "https://github.com/your-org/faasinfer/issues"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"